--- a/client/src/styles/Dashboard.css
+++ b/client/src/styles/Dashboard.css
@@ -83,3 +83,8 @@
     justify-content: center;
     align-items: center;
 }
+.logout{
+  display: flex; 
+  justify-content: end;
+  /* align-items:; */
+}
